<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="75px" />

    <Button
        android:id="@+id/button_today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:background="@color/darkorange"
        android:onClick="seeEventOverview"
        android:text="@string/today_button"
        android:textColor="@color/white"
        android:layout_above="@+id/profile_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@color/darkorange"
        android:onClick="seeProfileOverview"
        android:text="@string/profile_button"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>

